--- a/views/pages/reset_password.ejs
+++ b/views/pages/reset_password.ejs
@@ -12,19 +12,15 @@
 
 <main>
     <div class="jumbotron">
-        <h1>LOGIN</h1>
+        <h1>Reset password</h1>
         <form id="login-form">
             <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
             </div>
-            <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input name="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-            </div>
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-primary">Send reset password email</button>
         </form>
-        <a href="/auth/reset-pass">Reset password</a>
+        <a href="/auth/login">Login</a>
     </div>
 </main>
 
@@ -34,14 +30,17 @@
 
 <%- include('../partials/firebase'); %>
 <script type="module">
-    import { getAuth, signInWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/9.8.2/firebase-auth.js'
+    import { getAuth, sendPasswordResetEmail  } from 'https://www.gstatic.com/firebasejs/9.8.2/firebase-auth.js'
 
     function loginSubmit(event) {
         console.log('login')
         event.preventDefault()
         var formData = new FormData(document.querySelector('#login-form'))
-        signInWithEmailAndPassword(getAuth(), formData.get('email'), formData.get('password')).then(({ user }) => {
-            window.location.replace("/");
+        sendPasswordResetEmail (getAuth(), formData.get('email'))
+        .then(() => {
+            
+        }).catch(err=>{
+
         })   
     }
 
