--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,9 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" href="/course">Courses</a>
+        <% if (profile.admin) { %>
+         <a class="nav-link" href="/users">Users</a>
+        <% } %>
       </li>
     </ul>
 </nav>
