--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
       <li class="nav-item">
         <a class="nav-link" href="/course">Courses</a>
         <% if (profile.admin) { %>
-         <a class="nav-link" href="/users">Users</a>
+         <a class="nav-link" href="/admin/users">Users</a>
         <% } %>
       </li>
     </ul>
