--- a/views/pages/reset_password.ejs
+++ b/views/pages/reset_password.ejs
@@ -13,7 +13,7 @@
 <main>
     <div class="jumbotron">
         <h1>Reset password</h1>
-        <form id="login-form">
+        <form id="form">
             <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
@@ -31,11 +31,11 @@
 <%- include('../partials/firebase'); %>
 <script type="module">
     import { getAuth, sendPasswordResetEmail  } from 'https://www.gstatic.com/firebasejs/9.8.2/firebase-auth.js'
+    var form = document.getElementById("form");
 
-    function loginSubmit(event) {
-        console.log('login')
+    function handler(event) {
         event.preventDefault()
-        var formData = new FormData(document.querySelector('#login-form'))
+        var formData = new FormData(form)
         sendPasswordResetEmail (getAuth(), formData.get('email'))
         .then(() => {
             
@@ -44,8 +44,7 @@
         })   
     }
 
-    var loginForm = document.getElementById("login-form");
-    loginForm.addEventListener('submit', loginSubmit);
+    form.addEventListener('submit', handler);
 
 </script>
 </body>
