--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,9 +2,17 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" href="/course">Courses</a>
-        <% if (profile.admin) { %>
-         <a class="nav-link" href="/admin/users">Users</a>
-        <% } %>
       </li>
+      <% if (profile?.admin) { %>
+      <li class="nav-item">
+        <a class="nav-link" href="/admin/users">Users</a>
+      </li>
+       <% } %>
+       <% if (profile) { %> 
+      <li class="nav-item">
+         <a class="nav-link" href="#" onclick="logout()">Logout</a>
+         <%- include('../partials/logout'); %>
+        </li>
+        <% } %>
     </ul>
 </nav>
