--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -3,7 +3,7 @@
 <head>
   <%- include('../partials/head'); %>
 </head>
-<body class="container">
+<body>
 
 <header>
   <%- include('../partials/header'); %>
@@ -49,7 +49,7 @@
   </style>
 </header>
 
-<main>
+<main class="container">
     <div class="fof">
         <h1>Error 404</h1>
     </div>
