--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -3,14 +3,14 @@
 <head>
   <%- include('../partials/head'); %>
 </head>
-<body class="container">
+<body>
 
 <header>
   <%- include('../partials/header'); %>
   <%- include('../partials/util'); %>
 </header>
 
-<main>
+<main class="container">
   <div class="card">
     <form id="create-account-form" class="card-body">
       <h3>Create account</h3>
