--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -3,15 +3,15 @@
 <head>
   <%- include('../partials/head'); %>
 </head>
-<body class="container">
+<body>
 
 <header>
   <!-- <%- include('../partials/header'); %> -->
   <%- include('../partials/util'); %>
 </header>
 
-<main>
-    <div class="jumbotron">
+<main class="container">
+  <div class="jumbotron">
         <h1>LOGIN</h1>
         <div class="alert alert-danger" role="alert" style="display: none" id="login-err">
           This is a primary alert—check it out!
