--- a/views/pages/reset_password.ejs
+++ b/views/pages/reset_password.ejs
@@ -3,15 +3,15 @@
 <head>
   <%- include('../partials/head'); %>
 </head>
-<body class="container">
+<body>
 
 <header>
   <!-- <%- include('../partials/header'); %> -->
   <%- include('../partials/util'); %>
 </header>
 
-<main>
-    <div class="jumbotron">
+<main class="container">
+  <div class="jumbotron">
         <h1>Reset password</h1>
         <form id="form">
             <div class="form-group">
