--- a/views/pages/user_detail.ejs
+++ b/views/pages/user_detail.ejs
@@ -3,14 +3,14 @@
 <head>
   <%- include('../partials/head'); %>
 </head>
-<body class="container">
+<body>
 
 <header>
   <%- include('../partials/header'); %>
   <%- include('../partials/util'); %>
 </header>
 
-<main>
+<main class="container">
   <h1><%= user.email %> </h1>
   <h2>User courses</h2>
   <ul class="list-group">
