--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,1 @@
-<p class="text-center text-muted">&copy; Copyright 2022 Online tutor</p>
+<p class="text-center text-muted" style="margin-top: 50px;">&copy; Copyright 2022 Online tutor</p>
