--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" href="/course">Courses</a>
@@ -15,4 +16,5 @@
         </li>
         <% } %>
     </ul>
+  </div>
 </nav>
