--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container">
-    <ul class="navbar-nav mr-auto">
+  <div class="container d-flex">
+    <a href="/" class="nav-link" style="padding: 0px;"><h2  class="mr-auto p-2" style="color: rgb(70, 135, 221); padding: 0px;"><strong>Online Tutor</strong></h2></a>
+    <ul class="navbar-nav p-2">
       <li class="nav-item">
         <a class="nav-link" href="/course">Courses</a>
       </li>
