--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -6,7 +6,7 @@
 <body>
 
 <header>
-  <!-- <%- include('../partials/header'); %> -->
+  <%- include('../partials/header'); %>
   <%- include('../partials/util'); %>
 </header>
 
