--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,25 +1,25 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container d-flex">
-    <a href="/" class="nav-link" style="padding: 0px;"><h2  class="mr-auto p-2" style="color: rgb(70, 135, 221); padding: 0px;"><strong>Online Tutor</strong></h2></a>
-    <ul class="navbar-nav p-2">
-      <li class="nav-item">
-        <a class="nav-link" href="/course">Courses</a>
-      </li>
-      <% if (profile?.admin) { %>
-      <li class="nav-item">
-        <a class="nav-link" href="/admin/users">Users</a>
-      </li>
-       <% } %>
-        <% if (profile) { %> 
-          <li class="nav-item">
-            <a class="nav-link" href="#" onclick="logout()">Logout</a>
+  <div class="container d-flex align-items-start">
+    <a class="navbar-brand mr-auto p-2" href="/" style="color: rgb(70, 135, 221); padding: 0px; font-weight: bold;">Online Tutor</a>
+    <div class="p-2">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="/course">Courses</a>
+          <% if (profile?.admin) { %>
+            <a class="nav-item nav-link active" href="/admin/users">Users</a>
+          <% } %>
+          <% if (profile) { %> 
+            <a href="/profile" class="nav-item nav-link active">Profile</a>
+            <a class="nav-item nav-link active" href="#" onclick="logout()">Logout</a>
             <%- include('../partials/logout'); %>
-          </li>
-        <% } else { %>
-          <li class="nav-item">
-            <a class="nav-link" href="/auth/login">Login</a>
-          </li>
-        <% } %>
-    </ul>
+          <% } else { %>
+            <a class="nav-item nav-link active" href="/auth/login">Login</a>
+          <% } %>
+        </div>
+      </div>
+    </div>
   </div>
 </nav>
