--- a/views/partials/utils_style.ejs
+++ b/views/partials/utils_style.ejs
@@ -1,13 +1,18 @@
 <style>
     .line{
-     width: 112px;
-     height: 5px;
+        width: 112px;
+        height: 5px;
 
-     border-bottom: 5px solid rgb(70, 135, 221);
-   }
+        border-bottom: 5px solid var(--accent-color);
+    }
 
     a:hover, a:visited, a:link, a:active
     {
         text-decoration: none;
+    }
+
+    h2{
+      font-weight: 700;
+      color: #3e3e3e;
     }
 </style>
