--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,5 +7,9 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <style>
-  body { padding-top:0px; }
+  body { padding-top:0px; 
+    --accent-color: rgb(141, 70, 221);
+    --accent-bold: rgb(93, 45, 148);
+    --accent-light: rgb(94, 118, 226);
+  }
 </style>
