update login/reset page update course/lecture page

--- a/views/pages/course.ejs
+++ b/views/pages/course.ejs
@@ -13,13 +13,13 @@
       overflow: hidden;
     }
     .card-title{
-      margin: 0;
+      margin: 0.1em;
       color: #3e3e3e;
       font-weight: 500;
       font-size: 1rem;
     }
     .card-detail{
-      margin: 0;
+      margin: 0.1em;
       color: #3e3e3e;
       font-size: small;
       font-size: 0.9rem;
