--- a/views/pages/reset_password.ejs
+++ b/views/pages/reset_password.ejs
@@ -8,20 +8,61 @@
 <header>
   <%- include('../partials/header'); %>
   <%- include('../partials/util'); %>
+  <style>
+    .login-card{
+      background:  var(--accent-color);
+      background: linear-gradient(0deg,  var(--accent-color) 0%, var(--accent-light) 100%);
+      border-width: 0;
+      border-radius: 20px;
+      margin-top: 50px;
+      width: 500px;
+    }
+
+    .login-card div h1{
+      color: white;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    .login-card div form input {
+      border-radius: 30px;
+      border-width: 0;
+    }
+
+    .login-card a{
+      color: rgba(255, 255, 255, 0.63);
+      font-size: small;
+      float: right;
+    }
+
+    .login-card a:hover{
+      text-decoration: none;
+    }
+
+    .login-card form button {
+      border-radius: 30px;
+      font-weight: 500;
+      background: var(--accent-high-light);
+      border-width: 0;
+      width: 100%;
+    }
+  </style>
 </header>
 
-<main class="container">
-  <div class="jumbotron">
-        <h1>Reset password</h1>
-        <form id="form">
-            <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-            </div>
-            <button type="submit" class="btn btn-primary">Send reset password email</button>
-        </form>
-        <a href="/auth/login">Login</a>
+<main class="container d-flex justify-content-center">
+  <div class="card login-card">
+    <div class="card-body">
+      <h1>Reset password</h1>
+      <form id="form">
+          <div class="form-group">
+          <!-- <label for="exampleInputEmail1">Email address</label> -->
+          <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+          </div>
+          <button type="submit" class="btn btn-primary">Send reset password email</button>
+      </form>
+      <a href="/auth/login">Login</a>
     </div>
+  </div>
 </main>
 
 <footer>
