--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -11,5 +11,6 @@
     --accent-color: rgb(141, 70, 221);
     --accent-bold: rgb(93, 45, 148);
     --accent-light: rgb(94, 118, 226);
+    --accent-high-light: rgb(194, 60, 228);
   }
 </style>
