--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,48 @@
-<p class="text-center text-muted" style="margin-top: 50px;">&copy; Copyright 2022 Online tutor</p>
+<style>
+.icon span {
+	font-size: 20px;
+	font-weight: 500;
+	line-height: 60px;
+	margin-left: 10px;
+}
+
+.icon {
+    cursor: pointer;
+	width: 40px;
+	height: 40px;
+	text-align: center;
+	border-radius: 50px;
+	display: inline-block;
+	transition: all 0.3s ease-in-out;
+}
+
+.icon i {
+	font-size: 20px;
+	line-height: 40px;
+	transition: all 0.3s ease-in-out;
+}
+
+.icon i {
+	color: var(--accent-light);
+}
+
+.icon:hover i {
+	color: var(--accent-color);
+}
+
+</style>
+<div class="section-separator container"></div>
+<div class="d-flex align-items-center container pt-5">
+    <div class="mr-auto">
+        <p class="text-muted" style="margin: 0;">&copy; Copyright 2022 Online tutor</p>
+    </div>
+    <div class="wrapper">
+        <a class="icon" href="https://www.facebook.com/minhtri.teacher/">
+            <i class="fab fa-facebook-f"></i>
+        </a>
+    
+        <a class="icon" href="https://www.youtube.com/channel/UCQmLicOr3Fu_CjpulB8hGpA">
+            <i class="fab fa-youtube"></i>
+        </a>
+    </div>
+</div>
