--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,11 +6,21 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/2ba08b09c8.js" crossorigin="anonymous"></script> 
+
 <style>
-  body { padding-top:0px; 
+  @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap");
+  body { 
+    padding-top:0px; 
     --accent-color: rgb(141, 70, 221);
     --accent-bold: rgb(93, 45, 148);
     --accent-light: rgb(94, 118, 226);
     --accent-high-light: rgb(194, 60, 228);
+  }
+
+  
+  .accent-gradient {
+    background:  var(--accent-color);
+    background: linear-gradient(0deg,  var(--accent-color) 0%, var(--accent-light) 100%);
   }
 </style>
